// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest vs output: 00 - manifest 1`] = `
Object {
  "browser_action": Object {
    "default_popup": "pages/popup/index.html",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/index.esm-wrapper-600ffb76.js",
      ],
      "matches": Array [
        "https://*/*",
        "http://*/*",
      ],
    },
    Object {
      "js": Array [
        "assets/index.esm-wrapper-72fbbdd0.js",
      ],
      "matches": Array [
        "https://*/*",
        "http://*/*",
      ],
    },
  ],
  "description": "integration tests",
  "manifest_version": 2,
  "name": "Test",
  "permissions": Array [],
  "version": "1.0.0",
  "web_accessible_resources": Array [
    "content1/index.js",
    "content2/index.js",
    "vendor chunk",
  ],
}
`;

exports[`manifest vs output: 01 - files from manifest 1`] = `
Object {
  "CSS": Array [],
  "HTML": Array [
    "pages/popup/index.html",
  ],
  "IMAGE": Array [],
  "JSON": Array [],
  "SCRIPT_BACKGROUND": Array [],
  "SCRIPT_DECLARED": Array [
    "assets/index.esm-wrapper-600ffb76.js",
    "assets/index.esm-wrapper-72fbbdd0.js",
  ],
}
`;

exports[`manifest vs output: 02 - files from output 1`] = `
Array [
  "assets/index.esm-wrapper-600ffb76.js",
  "assets/index.esm-wrapper-72fbbdd0.js",
  "content1/index.js",
  "content2/index.js",
  "manifest.json",
  "pages/popup/index.html",
  "pages/popup/index.js",
  "vendor chunk",
]
`;

exports[`manifest vs output: 03 - manifest files match output 1`] = `
Object {
  "assets/index.esm-wrapper-600ffb76.js": true,
  "assets/index.esm-wrapper-72fbbdd0.js": true,
  "pages/popup/index.html": true,
}
`;

exports[`manifest vs output: assets/index.esm-wrapper-72fbbdd0.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content2/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: assets/index.esm-wrapper-600ffb76.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content1/index.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: content1/index.js 1`] = `
"import { r as reactDom, R as React } from '../vendor-chunk.js';

console.log(\\"content script\\");
const root = document.createElement(\\"div\\");
root.id = \\"root\\";
document.body.append(root);
reactDom.exports.render(/* @__PURE__ */ React.createElement(\\"h1\\", null, \\"Hello World!\\"), root);
"
`;

exports[`manifest vs output: content2/index.js 1`] = `
"import { r as reactDom, R as React } from '../vendor-chunk.js';

console.log(\\"content script\\");
const root = document.createElement(\\"div\\");
root.id = \\"root\\";
document.body.append(root);
reactDom.exports.render(/* @__PURE__ */ React.createElement(\\"h1\\", null, \\"Hello World!\\"), root);
"
`;

exports[`manifest vs output: pages/popup/index.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=1000, initial-scale=1.0\\">
    <title>Popup Page</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <script src=\\"index.js\\" type=\\"module\\"></script>
  

</body></html>"
`;

exports[`manifest vs output: pages/popup/index.js 1`] = `
"import { R as React, a as ReactDOM } from '../../vendor-chunk.js';

const App = () => {
  return /* @__PURE__ */ React.createElement(\\"div\\", null, /* @__PURE__ */ React.createElement(\\"h1\\", null, \\"Popup Page\\"), /* @__PURE__ */ React.createElement(\\"p\\", null, \\"If you are seeing this, React is working!\\"));
};

console.log(\\"popup script\\");
const root = document.querySelector(\\"#root\\");
ReactDOM.render(/* @__PURE__ */ React.createElement(App, null), root);
"
`;
